--- a/src/main/resources/MatDefs/Material.yaml
+++ b/src/main/resources/MatDefs/Material.yaml
@@ -1,31 +1,49 @@
-Material: MyMaterial
-Shader: Common/MatDefs/Light/Lighting.j3md
-MaterialParameters:
-  - name: Diffuse
-    value: [0.505882, 0.505882, 0.505882, 1.0]
-  - name: UseMaterialColors
-    value: true
-  - name: ParallaxHeight
-    value: 0.05
-  - name: Ambient
-    value: [0.2, 0.2, 0.2, 1.0]
-  - name: BackfaceShadows
-    value: false
-  - name: DiffuseMap
-    value:
-      wrapMode:
-        S: Repeat
-        T: Repeat
+---
+Material: 
+  name: "MyMaterial"
+  def: "Common/MatDefs/Light/Lighting.j3md"
+  materialParameters: 
+  - name: "Diffuse"
+    value: 
+    - "0.505882"
+    - "0.505882"
+    - "0.505882"
+    - "1"
+  - name: "UseMaterialColors"
+    value: "true"
+  - name: "ParallaxHeight"
+    value: "0.05"
+  - name: "Ambient"
+    value: 
+    - "0.2"
+    - "0.2"
+    - "0.2"
+    - "1"
+  - name: "BackfaceShadows"
+    value: "false"
+  - name: "DiffuseMap"
+    texture: 
       path: "Models/Ferrari/red_car_texture.jpg"
-  - name: Specular
-    value: [0.5, 0.5, 0.5, 1.0]
-  - name: Shininess
-    value: 12.5
-AdditionalRenderState:
-  FaceCull: Back
-  DepthWrite: On
-  ColorWrite: On
-  PolyOffset: [0.0, 0.0]
-  DepthTest: On
-  Blend: Off
-  Wireframe: Off
+      wrapMode: "Repeat"
+      minFilter: "BilinearNoMipMaps"
+      magFilter: "Bilinear"
+      flipY: "true"
+      anisotropy: "4"
+  - name: "Specular"
+    value: 
+    - "0.5"
+    - "0.5"
+    - "0.5"
+    - "1"
+  - name: "Shininess"
+    value: "12.5"
+  additionalRenderState: 
+    faceCull: "Back"
+    blend: "Off"
+    depthWrite: "true"
+    colorWrite: "true"
+    depthTest: "true"
+    wireframe: "false"
+    polyOffset: 
+    - "1"
+    - "1"
