--- a/build.gradle
+++ b/build.gradle
@@ -31,6 +31,9 @@ dependencies {
     runtimeOnly 'org.jmonkeyengine:jme3-lwjgl3:' + jmeVersion // LWJGL 3.x
     runtimeOnly 'org.jmonkeyengine:jme3-plugins:' + jmeVersion
     
+    // https://mvnrepository.com/artifact/org.yaml/snakeyaml
+    implementation 'org.yaml:snakeyaml:1.30'
+    
     //runtimeOnly 'org.jmonkeyengine:jme3-testdata:3.1.0-stable'
     runtimeOnly 'org.jmonkeyengine:jme3-testdata:3.4.0-alpha6'
     
