--- a/build.gradle
+++ b/build.gradle
@@ -28,8 +28,9 @@ dependencies {
     // jMonkeyEngine
     implementation 'org.jmonkeyengine:jme3-core:' + jmeVersion
     implementation 'org.jmonkeyengine:jme3-desktop:' + jmeVersion
+    
+    implementation 'org.jmonkeyengine:jme3-plugins:' + jmeVersion
     runtimeOnly 'org.jmonkeyengine:jme3-lwjgl3:' + jmeVersion // LWJGL 3.x
-    runtimeOnly 'org.jmonkeyengine:jme3-plugins:' + jmeVersion
     
     // https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-core
     implementation 'com.fasterxml.jackson.core:jackson-core:2.13.0'
