--- a/src/main/resources/MatDefs/New/PBRLighting.yaml
+++ b/src/main/resources/MatDefs/New/PBRLighting.yaml
@@ -157,12 +157,8 @@ MaterialDef:
   Techniques: 
   - name: "PostShadow"
     FragmentShader: "Common/MatDefs/Shadow/PostShadowPBR.frag"
-    ShaderLanguages: 
-    - "GLSL310"
-    - "GLSL300"
-    - "GLSL150"
-    - "GLSL100"
     VertexShader: "Common/MatDefs/Shadow/PostShadow.vert"
+    ShaderLanguages: ["GLSL310", "GLSL300", "GLSL150", "GLSL100"]
     WorldParameters: 
     - "WorldViewProjectionMatrix"
     - "WorldMatrix"
@@ -205,11 +201,8 @@ MaterialDef:
       - "0"
   - name: "PreShadow"
     FragmentShader: "Common/MatDefs/Shadow/PreShadowPBR.frag"
-    ShaderLanguages: 
-    - "GLSL300"
-    - "GLSL150"
-    - "GLSL100"
     VertexShader: "Common/MatDefs/Shadow/PreShadow.vert"
+    ShaderLanguages: ["GLSL300", "GLSL150", "GLSL100"]
     WorldParameters: 
     - "WorldViewProjectionMatrix"
     - "WorldViewMatrix"
@@ -236,11 +229,8 @@ MaterialDef:
       - "3"
   - name: "PreNormalPass"
     FragmentShader: "Common/MatDefs/SSAO/normal.frag"
-    ShaderLanguages: 
-    - "GLSL300"
-    - "GLSL150"
-    - "GLSL100"
     VertexShader: "Common/MatDefs/SSAO/normal.vert"
+    ShaderLanguages: ["GLSL300", "GLSL150", "GLSL100"]
     WorldParameters: 
     - "WorldViewProjectionMatrix"
     - "WorldViewMatrix"
@@ -262,11 +252,8 @@ MaterialDef:
       param: "NumberOfTargetsBuffers"
   - name: "Glow"
     FragmentShader: "Common/MatDefs/Light/PBRGlow.frag"
-    ShaderLanguages: 
-    - "GLSL300"
-    - "GLSL150"
-    - "GLSL100"
     VertexShader: "Common/MatDefs/Misc/Unshaded.vert"
+    ShaderLanguages: ["GLSL300", "GLSL150", "GLSL100"]
     WorldParameters: 
     - "WorldViewProjectionMatrix"
     - "ViewProjectionMatrix"
@@ -288,8 +275,8 @@ MaterialDef:
       param: "NumberOfTargetsBuffers"
   - name: "Default"
     FragmentShader: "Common/MatDefs/Light/PBRLighting.frag"
-    ShaderLanguages: "GLSL150"
     VertexShader: "Common/MatDefs/Light/PBRLighting.vert"
+    ShaderLanguages: ["GLSL300", "GLSL150", "GLSL100"]
     LightMode: "SinglePassAndImageBased"
     WorldParameters: 
     - "WorldViewProjectionMatrix"
