--- a/src/main/resources/MatDefs/New/Lighting.yaml
+++ b/src/main/resources/MatDefs/New/Lighting.yaml
@@ -1,54 +1,34 @@
 ---
 MaterialDef: 
-  name: "PBR Lighting"
+  name: "Phong Lighting"
   MaterialParameters: 
+  - type: "Float"
+    name: "ExpSqFog"
   - type: "Boolean"
     name: "SeparateTexCoord"
   - type: "Vector3"
     name: "LightPos"
   - type: "Boolean"
-    name: "UseSpecularAA"
-    value: "true"
-  - type: "Float"
-    name: "Roughness"
-    value: "1"
+    name: "VertexLighting"
   - type: "Texture2D"
-    name: "EmissiveMap"
+    name: "DiffuseMap"
+  - type: "Float"
+    name: "ExpFog"
   - type: "Texture2D"
     name: "SpecularMap"
-  - type: "Float"
-    name: "Glossiness"
-    value: "1"
   - type: "Texture2D"
-    name: "SpecularGlossinessMap"
-  - type: "Vector4"
-    name: "Emissive"
+    name: "GlowMap"
   - type: "Float"
     name: "NormalType"
-    value: "-1"
   - type: "Float"
     name: "ShadowIntensity"
-  - type: "Texture2D"
-    name: "MetallicRoughnessMap"
-    colorSpace: "Linear"
-  - type: "Float"
-    name: "EmissivePower"
-    value: "3"
-  - type: "Float"
-    name: "NormalScale"
   - type: "Boolean"
     name: "BackfaceShadows"
     value: "false"
-  - type: "Float"
-    name: "EmissiveIntensity"
-    value: "2"
   - type: "Boolean"
-    name: "UseSpecGloss"
+    name: "EnvMapAsSphereMap"
   - type: "Boolean"
     name: "SteepParallax"
-  - type: "Float"
-    name: "Metallic"
-    value: "1"
   - type: "Matrix4"
     name: "LightViewProjectionMatrix1"
   - type: "FloatArray"
@@ -57,6 +37,8 @@ MaterialDef:
     name: "AlphaDiscardThreshold"
   - type: "Matrix4"
     name: "LightViewProjectionMatrix2"
+  - type: "Vector3"
+    name: "FresnelParams"
   - type: "Texture2D"
     name: "ParallaxMap"
     colorSpace: "Linear"
@@ -66,19 +48,12 @@ MaterialDef:
     name: "HardwareShadows"
   - type: "Matrix4"
     name: "LightViewProjectionMatrix5"
-  - type: "Texture2D"
-    name: "RoughnessMap"
-    colorSpace: "Linear"
   - type: "Matrix4"
     name: "LightViewProjectionMatrix3"
   - type: "Matrix4"
     name: "LightViewProjectionMatrix4"
   - type: "Matrix4Array"
     name: "BoneMatrices"
-  - type: "Texture2D"
-    name: "GlossinessMap"
-  - type: "Float"
-    name: "SpecularAAKappa"
   - type: "Int"
     name: "NumberOfBones"
   - type: "Texture2D"
@@ -87,12 +62,12 @@ MaterialDef:
     name: "ShadowMap4"
   - type: "Vector4"
     name: "Splits"
-  - type: "Boolean"
-    name: "HorizonFade"
+  - type: "Vector2"
+    name: "LinearFog"
   - type: "Boolean"
     name: "UseInstancing"
-  - type: "Float"
-    name: "SpecularAASigma"
+  - type: "TextureCubeMap"
+    name: "EnvMap"
   - type: "Texture2D"
     name: "ShadowMap1"
   - type: "Texture2D"
@@ -105,49 +80,46 @@ MaterialDef:
     name: "ShadowMap2"
   - type: "Vector2"
     name: "FadeInfo"
-  - type: "Vector4"
-    name: "BaseColor"
-    value: 
-    - "1"
-    - "1"
-    - "1"
-    - "1"
+  - type: "Boolean"
+    name: "UseMaterialColors"
   - type: "Float"
     name: "PCFEdge"
   - type: "Float"
     name: "ParallaxHeight"
     value: "0.05"
   - type: "Boolean"
-    name: "AoPackedInMRMap"
+    name: "UseFog"
   - type: "Texture2D"
     name: "NormalMap"
     colorSpace: "Linear"
-  - type: "Texture2D"
-    name: "BaseColorMap"
   - type: "Boolean"
     name: "PackedNormalParallax"
   - type: "Boolean"
     name: "UseVertexColor"
   - type: "Vector4"
     name: "Specular"
-    value: 
-    - "1"
-    - "1"
-    - "1"
-    - "1"
-  - type: "Float"
-    name: "AoStrength"
+  - type: "Vector4"
+    name: "Diffuse"
   - type: "Int"
     name: "NumberOfMorphTargets"
-  - type: "Texture2D"
-    name: "MetallicMap"
-    colorSpace: "Linear"
-  - type: "Boolean"
-    name: "LightMapAsAOMap"
   - type: "Int"
     name: "FilterMode"
+  - type: "Vector4"
+    name: "FogColor"
+  - type: "Texture2D"
+    name: "AlphaMap"
+    colorSpace: "Linear"
+  - type: "Float"
+    name: "Shininess"
+    value: "1"
   - type: "Float"
     name: "ShadowMapSize"
+  - type: "Vector4"
+    name: "Ambient"
+  - type: "Vector4"
+    name: "GlowColor"
+  - type: "Texture2D"
+    name: "ColorRamp"
   - type: "Int"
     name: "NumberOfTargetsBuffers"
   - type: "Texture2D"
@@ -156,7 +128,7 @@ MaterialDef:
     name: "BoundDrawBuffer"
   Techniques: 
   - name: "PostShadow"
-    FragmentShader: "Common/MatDefs/Shadow/PostShadowPBR.frag"
+    FragmentShader: "Common/MatDefs/Shadow/PostShadow.frag"
     VertexShader: "Common/MatDefs/Shadow/PostShadow.vert"
     ShaderLanguages: ["GLSL310", "GLSL300", "GLSL150", "GLSL100"]
     WorldParameters: 
@@ -164,6 +136,7 @@ MaterialDef:
     - "WorldMatrix"
     - "ViewProjectionMatrix"
     - "ViewMatrix"
+    - "NormalMatrix"
     Defines: 
       BOUND_DRAW_BUFFER: "BoundDrawBuffer"
       HARDWARE_SHADOWS: "HardwareShadows"
@@ -184,9 +157,9 @@ MaterialDef:
       DepthWrite: "false"
       PolyOffset: [-0.1, 0]
   - name: "PreShadow"
-    FragmentShader: "Common/MatDefs/Shadow/PreShadowPBR.frag"
+    FragmentShader: "Common/MatDefs/Shadow/PreShadow.frag"
     VertexShader: "Common/MatDefs/Shadow/PreShadow.vert"
-    ShaderLanguages: ["GLSL300", "GLSL150", "GLSL100"]
+    ShaderLanguages: ["GLSL310", "GLSL300", "GLSL150", "GLSL100"]
     WorldParameters: 
     - "WorldViewProjectionMatrix"
     - "WorldViewMatrix"
@@ -206,7 +179,7 @@ MaterialDef:
   - name: "PreNormalPass"
     FragmentShader: "Common/MatDefs/SSAO/normal.frag"
     VertexShader: "Common/MatDefs/SSAO/normal.vert"
-    ShaderLanguages: ["GLSL300", "GLSL150", "GLSL100"]
+    ShaderLanguages: ["GLSL310", "GLSL300", "GLSL150", "GLSL100"]
     WorldParameters: 
     - "WorldViewProjectionMatrix"
     - "WorldViewMatrix"
@@ -215,69 +188,104 @@ MaterialDef:
     - "ViewMatrix"
     Defines: 
       BOUND_DRAW_BUFFER: "BoundDrawBuffer"
-      BASECOLORMAP_ALPHA: "BaseColorMap"
+      DIFFUSEMAP_ALPHA: "DiffuseMap"
       NUM_BONES: "NumberOfBones"
       INSTANCING: "UseInstancing"
       NUM_MORPH_TARGETS: "NumberOfMorphTargets"
       NUM_TARGETS_BUFFERS: "NumberOfTargetsBuffers"
   - name: "Glow"
-    FragmentShader: "Common/MatDefs/Light/PBRGlow.frag"
+    FragmentShader: "Common/MatDefs/Light/Glow.frag"
     VertexShader: "Common/MatDefs/Misc/Unshaded.vert"
-    ShaderLanguages: ["GLSL300", "GLSL150", "GLSL100"]
+    ShaderLanguages: ["GLSL310", "GLSL300", "GLSL150", "GLSL100"]
     WorldParameters: 
     - "WorldViewProjectionMatrix"
     - "ViewProjectionMatrix"
     - "ViewMatrix"
     Defines: 
-      HAS_EMISSIVEMAP: "EmissiveMap"
-      HAS_EMISSIVECOLOR: "Emissive"
       BOUND_DRAW_BUFFER: "BoundDrawBuffer"
+      HAS_GLOWMAP: "GlowMap"
+      HAS_GLOWCOLOR: "GlowColor"
       NUM_BONES: "NumberOfBones"
       INSTANCING: "UseInstancing"
       NUM_MORPH_TARGETS: "NumberOfMorphTargets"
       NUM_TARGETS_BUFFERS: "NumberOfTargetsBuffers"
   - name: "Default"
-    FragmentShader: "Common/MatDefs/Light/PBRLighting.frag"
-    VertexShader: "Common/MatDefs/Light/PBRLighting.vert"
-    ShaderLanguages: ["GLSL300", "GLSL150", "GLSL100"]
-    LightMode: "SinglePassAndImageBased"
+    FragmentShader: "Common/MatDefs/Light/SPLighting.frag"
+    VertexShader: "Common/MatDefs/Light/SPLighting.vert"
+    ShaderLanguages: ["GLSL310", "GLSL300", "GLSL150", "GLSL100"]
+    LightMode: "SinglePass"
     WorldParameters: 
     - "WorldViewProjectionMatrix"
+    - "NormalMatrix"
+    - "WorldViewMatrix"
+    - "ViewMatrix"
     - "CameraPosition"
     - "WorldMatrix"
-    - "WorldNormalMatrix"
     - "ViewProjectionMatrix"
-    - "ViewMatrix"
     Defines: 
       BOUND_DRAW_BUFFER: "BoundDrawBuffer"
-      BASECOLORMAP: "BaseColorMap"
+      VERTEX_COLOR: "UseVertexColor"
+      VERTEX_LIGHTING: "VertexLighting"
+      MATERIAL_COLORS: "UseMaterialColors"
+      DIFFUSEMAP: "DiffuseMap"
       NORMALMAP: "NormalMap"
-      NORMALSCALE: "NormalScale"
-      METALLICMAP: "MetallicMap"
-      ROUGHNESSMAP: "RoughnessMap"
-      EMISSIVEMAP: "EmissiveMap"
-      EMISSIVE: "Emissive"
-      SPECGLOSSPIPELINE: "UseSpecGloss"
+      SPECULARMAP: "SpecularMap"
       PARALLAXMAP: "ParallaxMap"
       NORMALMAP_PARALLAX: "PackedNormalParallax"
       STEEP_PARALLAX: "SteepParallax"
+      ALPHAMAP: "AlphaMap"
+      COLORRAMP: "ColorRamp"
       LIGHTMAP: "LightMap"
       SEPARATE_TEXCOORD: "SeparateTexCoord"
       DISCARD_ALPHA: "AlphaDiscardThreshold"
+      USE_REFLECTION: "EnvMap"
+      SPHERE_MAP: "EnvMapAsSphereMap"
       NUM_BONES: "NumberOfBones"
       INSTANCING: "UseInstancing"
-      USE_PACKED_MR: "MetallicRoughnessMap"
-      USE_PACKED_SG: "SpecularGlossinessMap"
-      SPECULARMAP: "SpecularMap"
-      SPECULAR_AA: "UseSpecularAA"
-      SPECULAR_AA_SCREEN_SPACE_VARIANCE: "SpecularAASigma"
-      SPECULAR_AA_THRESHOLD: "SpecularAAKappa"
-      GLOSSINESSMAP: "GlossinessMap"
-      NORMAL_TYPE: "NormalType"
-      VERTEX_COLOR: "UseVertexColor"
-      AO_MAP: "LightMapAsAOMap"
-      AO_PACKED_IN_MR_MAP: "AoPackedInMRMap"
-      AO_STRENGTH: "AoStrength"
       NUM_MORPH_TARGETS: "NumberOfMorphTargets"
       NUM_TARGETS_BUFFERS: "NumberOfTargetsBuffers"
-      HORIZON_FADE: "HorizonFade"
+      NORMAL_TYPE: "NormalType"
+      USE_FOG: "UseFog"
+      FOG_LINEAR: "LinearFog"
+      FOG_EXP: "ExpFog"
+      FOG_EXPSQ: "ExpSqFog"
+  - name: "Default"
+    FragmentShader: "Common/MatDefs/Light/Lighting.frag"
+    VertexShader: "Common/MatDefs/Light/Lighting.vert"
+    ShaderLanguages: ["GLSL310", "GLSL300", "GLSL150", "GLSL100"]
+    LightMode: "MultiPass"
+    WorldParameters: 
+    - "WorldViewProjectionMatrix"
+    - "NormalMatrix"
+    - "WorldViewMatrix"
+    - "ViewMatrix"
+    - "CameraPosition"
+    - "WorldMatrix"
+    - "ViewProjectionMatrix"
+    Defines: 
+      BOUND_DRAW_BUFFER: "BoundDrawBuffer"
+      VERTEX_COLOR: "UseVertexColor"
+      VERTEX_LIGHTING: "VertexLighting"
+      MATERIAL_COLORS: "UseMaterialColors"
+      DIFFUSEMAP: "DiffuseMap"
+      NORMALMAP: "NormalMap"
+      SPECULARMAP: "SpecularMap"
+      PARALLAXMAP: "ParallaxMap"
+      NORMALMAP_PARALLAX: "PackedNormalParallax"
+      STEEP_PARALLAX: "SteepParallax"
+      ALPHAMAP: "AlphaMap"
+      COLORRAMP: "ColorRamp"
+      LIGHTMAP: "LightMap"
+      SEPARATE_TEXCOORD: "SeparateTexCoord"
+      DISCARD_ALPHA: "AlphaDiscardThreshold"
+      USE_REFLECTION: "EnvMap"
+      SPHERE_MAP: "EnvMapAsSphereMap"
+      NUM_BONES: "NumberOfBones"
+      INSTANCING: "UseInstancing"
+      NUM_MORPH_TARGETS: "NumberOfMorphTargets"
+      NUM_TARGETS_BUFFERS: "NumberOfTargetsBuffers"
+      NORMAL_TYPE: "NormalType"
+      USE_FOG: "UseFog"
+      FOG_LINEAR: "LinearFog"
+      FOG_EXP: "ExpFog"
+      FOG_EXPSQ: "ExpSqFog"
