--- a/src/main/resources/Materials/Material.yaml
+++ b/src/main/resources/Materials/Material.yaml
@@ -1,7 +1,8 @@
 ---
 Material: 
   name: "MyMaterial"
-  def: "Common/MatDefs/Light/Lighting.j3md"
+  #def: "Common/MatDefs/Light/Lighting.j3md"
+  def: "MatDefs/New/Lighting.yaml"
   materialParameters: 
   - name: "Diffuse"
     value: 
@@ -44,4 +45,4 @@ Material:
     colorWrite: true
     depthTest: true
     wireframe: false
-    polyOffset: [0.0, 0.0]
+    polyOffset: [0.0, 1.0]
