--- a/src/main/resources/Materials/Material.yaml
+++ b/src/main/resources/Materials/Material.yaml
@@ -4,45 +4,34 @@ Material:
   #def: "Common/MatDefs/Light/Lighting.j3md"
   def: "MatDefs/New/Lighting.yaml"
   materialParameters: 
-  - name: "Diffuse"
-    value: 
-    - "0.505882"
-    - "0.505882"
-    - "0.505882"
-    - "1"
-  - name: "UseMaterialColors"
-    value: true
   - name: "ParallaxHeight"
     value: "0.05"
+  - name: "Shininess"
+    value: "12.5"
+  - name: "Diffuse"
+    value: [0.505882, 0.505882, 0.505882, 1]
   - name: "Ambient"
-    value: 
-    - "0.2"
-    - "0.2"
-    - "0.2"
-    - "1"
+    value: [0.2, 0.2, 0.2, 1]
+  - name: "Specular"
+    value: [0.5, 0.5, 0.5, 1]
+  - name: "UseMaterialColors"
+    value: "true"
   - name: "BackfaceShadows"
-    value: false
+    value: "false"
   - name: "DiffuseMap"
     texture: 
       path: "Models/Ferrari/Car.jpg"
-      wrapMode: "Repeat"
+      wrapS: "Repeat"
+      wrapT: "Repeat"
       minFilter: "BilinearNoMipMaps"
       magFilter: "Bilinear"
-      flipY: false
+      flipY: "false"
       anisotropy: "4"
-  - name: "Specular"
-    value: 
-    - "0.5"
-    - "0.5"
-    - "0.5"
-    - "1"
-  - name: "Shininess"
-    value: "12.5"
   additionalRenderState: 
     faceCull: "Back"
     blend: "Off"
-    depthWrite: true
-    colorWrite: true
-    depthTest: true
-    wireframe: false
-    polyOffset: [0.0, 1.0]
+    depthWrite: "true"
+    colorWrite: "true"
+    depthTest: "true"
+    wireframe: "false"
+    polyOffset: [0, 0]
