--- a/src/main/resources/MatDefs/New/ShowNormals.yaml
+++ b/src/main/resources/MatDefs/New/ShowNormals.yaml
@@ -2,10 +2,10 @@
 MaterialDef: 
   name: "Debug Normals"
   MaterialParameters: 
-  - type: "Boolean"
-    name: "UseInstancing"
-  - type: "Int"
-    name: "BoundDrawBuffer"
+  - Boolean:
+    - UseInstancing:
+  - Int:
+    - BoundDrawBuffer: 
   Techniques: 
   - name: "Default"
     FragmentShader: "Common/MatDefs/Misc/ShowNormals.frag"
