--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -7,15 +7,16 @@ on: [push]
 jobs:
   Java11-Linux:
     if: contains(toJson(github.event.commits), '[ci skip] ') == false
-    runs-on: ubuntu-24.04
+    runs-on: ubuntu-22.04
     steps:
+      - uses: actions/checkout@v4
       - uses: actions/setup-java@v4
         with:
           distribution: 'zulu'
           java-version: 11
-      - uses: actions/checkout@v4
-      - uses: gradle/actions/wrapper-validation@v4
-      - run: ./gradlew build --console=plain --no-daemon --stacktrace
+      - uses: gradle/wrapper-validation-action@v3
+      - run: chmod +x gradlew
+      - run: ./gradlew javadoc build --console=plain --no-daemon --stacktrac
 
   Java11-Windows:
     if: contains(toJson(github.event.commits), '[ci skip] ') == false
