--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -16,7 +16,7 @@ jobs:
           java-version: 11
       - uses: gradle/wrapper-validation-action@v3
       - run: chmod +x gradlew
-      - run: ./gradlew javadoc build --console=plain --no-daemon --stacktrac
+      - run: ./gradlew javadoc build --console=plain --no-daemon --stacktrace
 
   Java11-Windows:
     if: contains(toJson(github.event.commits), '[ci skip] ') == false
